Kubernets/svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: svc-pod-micro-livraria-loadbalancer
spec:
  type: NodePort
  selector: 
    app: micro-livraria
  ports:
    - name: port1
      port: 3000
      nodePort: 30001
    - name: port2
      port: 5000
      nodePort: 30002
